# backend

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  test.sh
app/: main.py
app/api/endpoints/: analyses.py  analysis.py  chat.py  sessions.py  users.py
app/core/: config.py  logging_config.py
app/db/: session.py
app/models/: analysis.py  session.py  user.py
app/schemas/: analysis.py  session.py  user.py
app/services/: analysis_service.py  chat_service.py
transcripts/: abhängigkeit.json  abhängigkeit.txt  cbt.json  cbt.txt  psychoedu.json  psychoedu.txt
